--- a/style.css
+++ b/style.css
@@ -16,4 +16,175 @@
 
     margin:0px;
     box-sizing: border-box;
+    font-family: "Outfit";
+}
+
+/* ------------ HTML ELEMENTS ------------------*/
+
+body {
+
+    display: grid;
+    height: 100dvh;
+    place-items: center;
+    background-color: var(--clr-neutral-eggshell);
+    color: var(--clr-neutral-wenge-brown)
+}
+
+h1 {
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-family: "Young Serif";
+    font-weight: 400;
+    color: black;
+}
+
+h2 {
+
+    padding-bottom: 1rem;
+    font-family: "Young Serif";
+    font-weight: 400;
+    color: var(--clr-primary-nutmeg)
+}
+
+header {
+
+    display: flex;
+    flex-direction: column;
+}
+
+img {
+
+    max-width: 40rem;
+    border-radius: 1rem 1rem;
+    align-self: center;
+}
+
+ol {
+
+    list-style: none;
+    counter-reset: nutrition-counter;
+}
+
+ol li {
+
+    counter-increment: nutrition-counter;
+}
+
+ol li::marker {
+
+    content: counter(nutrition-counter)".";
+    color: var(--clr-primary-nutmeg);
+    font-weight: 700;
+
+}
+
+li {
+
+    padding: 0.25rem;
+
+}
+
+main {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem
+}
+
+td {
+
+    padding:.75rem;
+    border-bottom: 1px solid var(--clr-neutral-light-grey);
+}
+
+footer {
+
+    align-self: end;
+
+}
+
+/* ------------ CLASS ELEMENTS ------------------*/
+
+.instruction-section {
+
+    line-height: 1.50rem;
+}
+
+.primary-container {
+
+    display: flex;
+    flex-direction: column;
+    max-width:45rem;
+    border-radius: 1rem 1rem;
+
+    padding:2rem;
+    background-color: var(--clr-neutral-white);
+    margin:2rem;
+}
+
+.overview-header {
+
+    color: var(--clr-primary-dark-raspberry);
+    padding:.75rem;
+    font-family: "Outfit";
+    font-weight: 700;
+   
+}
+
+.overview-wrapper {
+
+    background-color: var(--clr-neutral-rose-white);
+    padding: 1rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    border-radius: 1rem 1rem;
+
+}
+
+.tbl-nutrition {
+
+    width:100%;
+    padding: 1rem;
+}
+
+.tbl-bold {
+
+    color: var(--clr-primary-dark-raspberry);
+    font-weight: 700;
+}
+
+@media (max-width: 50rem) {
+
+    img {
+
+        max-width: 25rem;
+    }
+
+    .primary-container {
+
+        max-width:30rem;
+    }
+}
+
+
+@media (max-width: 35rem) {
+
+    body {
+
+        background-color: var(--clr-neutral-white);
+    }
+    
+    img {
+
+        max-width: 35rem;
+        border-radius: 0rem;
+    }
+
+    .primary-container {
+
+        max-width:20rem;
+        padding: 0rem;
+        margin: 0;
+    }
 }
